--- a/QLGiaoVien/QLGiaoVien/Views/GiaoVien/Index.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/GiaoVien/Index.cshtml
@@ -310,7 +310,7 @@
                         dataType: "string",
                         width: "*",
                         unbound: true,
-                        template: '<button class="" onClick="View(${id})"><i class="fa fa-eye"></i></button> <button onClick="DeleteRow(${id})" class=""><i class="fa fa-trash"></i></button>'
+                        template: '<button class="btn btn-info btn-circle" onClick="View(${id})"><i class="fa fa-eye"></i></button> <button onClick="DeleteRow(${id})" class="btn btn-circle btn-danger"><i class="fa fa-trash"></i></button>'
                     }
                 ],
                 autofitLastColumn: false,
