--- a/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
@@ -74,17 +74,15 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapseTwo">
+                <a class="nav-link" href="@Url.Action("KeKhai","GiangDay")"  aria-expanded="true">
                     <i class="fas fa-fw fa-list-ul"></i>
-                    <span>Giảng dạy</span>
+                    <span>Kê Khai Giảng dạy</span>
                 </a>
-                <div id="collapse2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        @*<h6 class="collapse-header">Custom Components:</h6>*@
-                        @*<a class="collapse-item" href="@Url.Action("Index", "GiaoVien")>Giáo Viên</a>*@
-                        <a class="collapse-item" href="@Url.Action("Index", "GiaoVien")">Giáo Viên </a>
-                    </div>
-                </div>
+                <a class="nav-link" href="@Url.Action("Index","GiangDay")" aria-expanded="true" >
+                    <i class="fas fa-fw fa-list-ul"></i>
+                    <span>Xem Tải Giảng dạy</span>
+                </a>
+                
             </li>
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapseTwo">
