--- a/QLGiaoVien/QLGiaoVien/Views/KhaoThi/_DanhSachKhaoThi.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/KhaoThi/_DanhSachKhaoThi.cshtml
@@ -5,7 +5,7 @@
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Hướng dẫn</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Khảo Thí</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -17,7 +17,6 @@
                             <th>Lớp</th>
                             <th>Số bài</th>
                             <th>Số giờ</th>
-
                         </tr>
                     </thead>
                     <tbody>
@@ -27,8 +26,7 @@
                             {
                                 <tr class="bg-gray-500 font-weight-bold">
                                     <td>@(i + 1)</td>
-                                    <td colspan="4">@Model[i].TenLoaiKhaoThi</td>
-                                    <td></td>
+                                    <td colspan="3">@Model[i].TenLoaiKhaoThi</td>
                                     <td>@Model[i].TongSoGio.ToString("N0")</td>
                                 </tr>
                                 for (int j = 0; j < Model[i].chiTiet.Count; j++)
@@ -38,13 +36,12 @@
                                         <td>@Model[i].chiTiet[j].TenKhaoThi</td>
                                         <td>@Model[i].chiTiet[j].TenLop</td>
                                         <td>@Model[i].chiTiet[j].SoBai</td>
-                                        <td></td>
                                         <td>@Model[i].chiTiet[j].SoGio.ToString("N0")</td>
                                     </tr>
                                 }
                             }
                             <tr class="bg-gray-500 font-weight-bold">
-                                <td colspan="7">Tổng số</td>
+                                <td colspan="4">Tổng số</td>
                                 <td>@Model.Sum(x => x.TongSoGio).ToString("N0")</td>
                             </tr>
                         }
