--- a/QLGiaoVien/QLGiaoVien/Views/HoiDong/_DanhSachHoiDong.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/HoiDong/_DanhSachHoiDong.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<DAO.KhaoThiView>
+﻿@model List<DAO.HoiDongView>
 
 <!-- Begin Page Content -->
 <div class="container-fluid">
@@ -13,45 +13,41 @@
                     <thead>
                         <tr>
                             <th>STT</th>
-                            <th>Học phần</th>
-                            <th>Lớp</th>
-                            <th>Số bài</th>
-                            <th>Số giờ</th>
+                            <th>Hội Đồng</th>
+                            <th>Số Lượng</th>
+                            <th>Số Giờ</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @if (Model.Count > 0)
+                        @if (Model.Count >0 )
                         {
                             for (int i = 0; i < Model.Count; i++)
                             {
                                 <tr class="bg-gray-500 font-weight-bold">
                                     <td>@(i + 1)</td>
-                                    <td colspan="3">@Model[i].TenLoaiKhaoThi</td>
+                                    <td colspan="2">@Model[i].TenLoaiHoiDong</td>
                                     <td>@Model[i].TongSoGio.ToString("N0")</td>
                                 </tr>
                                 for (int j = 0; j < Model[i].chiTiet.Count; j++)
                                 {
                                     <tr>
-                                        <td class="pl-5">@(j + 1)</td>
-                                        <td>@Model[i].chiTiet[j].TenKhaoThi</td>
-                                        <td>@Model[i].chiTiet[j].TenLop</td>
-                                        <td>@Model[i].chiTiet[j].SoBai</td>
+                                        <td class="pl-4">@(j + 1)</td>
+                                        <td>@Model[i].chiTiet[j].TenHoiDong</td>
+                                        <td>@Model[i].chiTiet[j].SoLuong</td>
                                         <td>@Model[i].chiTiet[j].SoGio</td>
                                     </tr>
                                 }
                             }
                             <tr class="bg-gray-500 font-weight-bold">
-                                <td colspan="4">Tổng số</td>
+                                <td colspan="3">Tổng số</td>
                                 <td>@Model.Sum(x => x.TongSoGio).ToString("N0")</td>
                             </tr>
                         }
-
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
-
 </div>
 <!-- /.container-fluid -->
 
