--- a/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
@@ -66,24 +66,25 @@
                     <span>Quản Lý Thông tin</span>
                 </a>
                 <div id="collapse1" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        @*<h6 class="collapse-header">Custom Components:</h6>*@
-                        @*<a class="collapse-item" href="@Url.Action("Index", "GiaoVien")>Giáo Viên</a>*@
-                        <a class="collapse-item" href="@Url.Action("Index", "GiaoVien")">Giáo Viên </a>
-                    </div>
+                    <a class="nav-link" href="@Url.Action("Index", "GiaoVien")" aria-expanded="true">
+                        <i class="fas fa-clipboard-list"></i>
+                        <span>Danh sách Giáo Viên</span>
+                    </a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("KeKhai","GiangDay")"  aria-expanded="true">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse8" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-list-ul"></i>
-                    <span>Kê Khai Giảng dạy</span>
+                    <span>Giảng Dạy</span>
                 </a>
-                <a class="nav-link" href="@Url.Action("Index","GiangDay")" aria-expanded="true" >
-                    <i class="fas fa-fw fa-list-ul"></i>
-                    <span>Xem Tải Giảng dạy</span>
-                </a>
-                
+                <div id="collapse8" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <a class="nav-link" href="@Url.Action("Index","GiangDay")" aria-expanded="true">
+                        <i class="fas fa-book-reader"></i>
+                        <span>Kê Khai Giảng Dạy</span>
+                    </a>
+                </div>
             </li>
+
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapseTwo">
                     <i class="fas fa-fw fa-list-ul"></i>
@@ -138,74 +139,74 @@
             </li>
 
             @*<li class="nav-item">
-                    <a class="nav-link" href="charts.html">
-                        <i class="fas fa-fw fa-address-book"></i>
-                        <span>Bảng Điểm</span>
-                    </a>
-                </li>
+            <a class="nav-link" href="charts.html">
+                <i class="fas fa-fw fa-address-book"></i>
+                <span>Bảng Điểm</span>
+            </a>
+        </li>
 
 
-                <li class="nav-item">
-                    <a class="nav-link" href="charts.html">
-                        <i class="fas fa-fw fa-book"></i>
-                        <span>Danh Sách Lớp</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="charts.html">
-                        <i class="fas fa-fw fa-book"></i>
-                        <span>Danh Sách Lớp</span>
-                    </a>
-                </li>
+        <li class="nav-item">
+            <a class="nav-link" href="charts.html">
+                <i class="fas fa-fw fa-book"></i>
+                <span>Danh Sách Lớp</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="charts.html">
+                <i class="fas fa-fw fa-book"></i>
+                <span>Danh Sách Lớp</span>
+            </a>
+        </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="charts.html">
-                        <i class="far fa-fw fa-chart-bar"></i>
-                        <span>Thống Kê</span>
-                    </a>
-                </li>
-                <!-- Nav Item - Utilities Collapse Menu -->
-                <li class="nav-item">
-                    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                        <i class="fas fa-fw fa-wrench"></i>
-                        <span>Utilities</span>
-                    </a>
-                    <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-                        <div class="bg-white py-2 collapse-inner rounded">
-                            <h6 class="collapse-header">Custom Utilities:</h6>
-                            <a class="collapse-item" href="utilities-color.html">Colors</a>
-                            <a class="collapse-item" href="utilities-border.html">Borders</a>
-                            <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                            <a class="collapse-item" href="utilities-other.html">Other</a>
-                        </div>
-                    </div>
-                </li>
-
-                <!-- Divider -->
-                <hr class="sidebar-divider">
-
-                <!-- Heading -->
-                <div class="sidebar-heading">
-                    Administrator
+        <li class="nav-item">
+            <a class="nav-link" href="charts.html">
+                <i class="far fa-fw fa-chart-bar"></i>
+                <span>Thống Kê</span>
+            </a>
+        </li>
+        <!-- Nav Item - Utilities Collapse Menu -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+                <i class="fas fa-fw fa-wrench"></i>
+                <span>Utilities</span>
+            </a>
+            <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+                <div class="bg-white py-2 collapse-inner rounded">
+                    <h6 class="collapse-header">Custom Utilities:</h6>
+                    <a class="collapse-item" href="utilities-color.html">Colors</a>
+                    <a class="collapse-item" href="utilities-border.html">Borders</a>
+                    <a class="collapse-item" href="utilities-animation.html">Animations</a>
+                    <a class="collapse-item" href="utilities-other.html">Other</a>
                 </div>
+            </div>
+        </li>
 
-                <!-- Nav Item - Pages Collapse Menu -->
-                <!-- Nav Item - Charts -->
-                <li class="nav-item">
-                    <a class="nav-link" href="charts.html">
-                        <i class="fas fa-fw fa-user"></i>
-                        <span>Quản Lý Tài Khoản</span>
-                    </a>
-                </li>
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+
+        <!-- Heading -->
+        <div class="sidebar-heading">
+            Administrator
+        </div>
+
+        <!-- Nav Item - Pages Collapse Menu -->
+        <!-- Nav Item - Charts -->
+        <li class="nav-item">
+            <a class="nav-link" href="charts.html">
+                <i class="fas fa-fw fa-user"></i>
+                <span>Quản Lý Tài Khoản</span>
+            </a>
+        </li>
 
 
-                <!-- Nav Item - Charts -->
-                <li class="nav-item">
-                    <a class="nav-link" href="charts.html">
-                        <i class="fas fa-fw fa-database"></i>
-                        <span>Sao Lưu</span>
-                    </a>
-                </li>*@
+        <!-- Nav Item - Charts -->
+        <li class="nav-item">
+            <a class="nav-link" href="charts.html">
+                <i class="fas fa-fw fa-database"></i>
+                <span>Sao Lưu</span>
+            </a>
+        </li>*@
 
 
 
