update hoi dong

--- a/QLGiaoVien/QLGiaoVien/Views/HoiDong/Index.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/HoiDong/Index.cshtml
@@ -23,7 +23,7 @@
                 <option value='null'>Tất cả</option>
                 @for (int i = 0; i < dsNam.Count; i++)
                 {
-                    <option value='@dsNam[i].id'>@dsNam[i].TenNamHoc</option>
+                    <option value='@dsNam[i].id'>Năm Học @dsNam[i].TenNamHoc</option>
                 }
             </select>
         </div>
@@ -40,6 +40,7 @@
 
 </div>
 <script>
+    var urlTb = '/HoiDong/_DanhSachHoiDong'
     $(document).ready(function () {
         $("#GV,#Nam").select2();
     })
