--- a/QLGiaoVien/QLGiaoVien/Views/HoiDong/_DanhSachHoiDong.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/HoiDong/_DanhSachHoiDong.cshtml
@@ -4,8 +4,11 @@
 <div class="container-fluid">
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
-        <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Khảo Thí</h6>
+        <div class="card-header py-3 row">
+            <h6 class="m-0 font-weight-bold text-primary col-10">Hội Đồng</h6>
+            <button type="button" class="col-2 btn btn-primary" onclick="Features.doPost('/HoiDong/_ChiTietHoiDong', {}, false, 'modal-body'); Features.isUpdate = false" data-toggle="modal" data-target="#exampleModal">
+                Thêm mới
+            </button>
         </div>
         <div class="card-body">
             <div class="table-responsive">
@@ -16,6 +19,7 @@
                             <th>Hội Đồng</th>
                             <th>Số Lượng</th>
                             <th>Số Giờ</th>
+                            <th>Chức Năng</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -26,21 +30,22 @@
                                 <tr class="bg-gray-500 font-weight-bold">
                                     <td>@(i + 1)</td>
                                     <td colspan="2">@Model[i].TenLoaiHoiDong</td>
-                                    <td>@Model[i].TongSoGio.ToString("N0")</td>
+                                    <td colspan="2">@Model[i].TongSoGio.ToString("N0")</td>
                                 </tr>
                                 for (int j = 0; j < Model[i].chiTiet.Count; j++)
                                 {
                                     <tr>
                                         <td class="pl-4">@(j + 1)</td>
-                                        <td>@Model[i].chiTiet[j].TenHoiDong</td>
+                                        <td>@Model[i].chiTiet[j].TenHoiDong (@Model[i].chiTiet[j].TenMuc)</td>
                                         <td>@Model[i].chiTiet[j].SoLuong</td>
                                         <td>@Model[i].chiTiet[j].SoGio</td>
+                                        <td><i data-toggle="modal" data-target="#exampleModal" onclick="Features.doPost('/HoiDong/_ChiTietHoiDong', {'ID':@Model[i].chiTiet[j].id}, false, 'modal-body');Features.isUpdate=true" class="fas fa-edit"></i> / <i onclick="Features.Delete('/Ajax/HoiDong_Xoa', {'ID':@Model[i].chiTiet[j].id})" class="fas fa-trash"></i></td>
                                     </tr>
                                 }
                             }
                             <tr class="bg-gray-500 font-weight-bold">
                                 <td colspan="3">Tổng số</td>
-                                <td>@Model.Sum(x => x.TongSoGio).ToString("N0")</td>
+                                <td colspan="2">@Model.Sum(x => x.TongSoGio).ToString("N0")</td>
                             </tr>
                         }
                     </tbody>
@@ -49,5 +54,36 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Hội Đồng</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                <button type="button" class="btn btn-primary" onclick="saveChanges()">Lưu</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- /.container-fluid -->
-
+<script>
+    function saveChanges() {
+        const obj = Features.getValueFromModal();
+        if(!obj) return;
+         obj.MaGV = +$("#GV").val();
+         obj.MaNamHoc = +$("#Nam").val();
+         obj.id = +obj.id;
+         obj.LoaiHoiDong_id = +obj.LoaiHoiDong_id;
+         obj.TenHoiDong = obj.TenHoiDong;
+         obj.SoLuong = +obj.SoLuong;
+         obj.MucThamGia_id = +obj.MucThamGia_id;
+         Features.doPost("/Ajax/HoiDong_ThemSua", { obj: obj ,isUpdate:Features.isUpdate}, true);
+    }
+</script>
