--- a/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
+++ b/QLGiaoVien/QLGiaoVien/Views/Shared/_Layout.cshtml
@@ -125,7 +125,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         @*<h6 class="collapse-header">Custom Components:</h6>*@
                         @*<a class="collapse-item" href="@Url.Action("Index", "GiaoVien")>Giáo Viên</a>*@
-                        <a class="collapse-item" href="@Url.Action("Index", "GiaoVien")">Giáo Viên </a>
+                        <a class="collapse-item" href="@Url.Action("Index", "KhaoThi")">Chi Tiết</a>
                     </div>
                 </div>
             </li>
@@ -138,7 +138,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         @*<h6 class="collapse-header">Custom Components:</h6>*@
                         @*<a class="collapse-item" href="@Url.Action("Index", "GiaoVien")>Giáo Viên</a>*@
-                        <a class="collapse-item" href="@Url.Action("Index", "GiaoVien")">Giáo Viên </a>
+                        <a class="collapse-item" href="@Url.Action("Index", "HoiDong")">Chi Tiết </a>
                     </div>
                 </div>
             </li>
